--- a/lib/dspy-method-view.ui
+++ b/lib/dspy-method-view.ui
@@ -24,6 +24,7 @@
             <property name="hexpand">1</property>
             <property name="ellipsize">end</property>
             <property name="xalign">0.0</property>
+            <property name="selectable">1</property>
             <layout>
               <property name="row">0</property>
               <property name="column">1</property>
@@ -48,6 +49,7 @@
             <property name="hexpand">1</property>
             <property name="ellipsize">end</property>
             <property name="xalign">0.0</property>
+            <property name="selectable">1</property>
             <layout>
               <property name="row">1</property>
               <property name="column">1</property>
@@ -72,6 +74,7 @@
             <property name="hexpand">1</property>
             <property name="ellipsize">end</property>
             <property name="xalign">0.0</property>
+            <property name="selectable">1</property>
             <layout>
               <property name="row">2</property>
               <property name="column">1</property>
