--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -3,177 +3,224 @@
   <requires lib="gtk" version="4.0"/>
   <template class="DspyView" parent="GtkWidget">
     <child>
-      <object class="GtkPaned" id="paned">
-        <property name="position">300</property>
+      <object class="AdwBreakpointBin">
+        <property name="width-request">360</property>
+        <property name="height-request">500</property>
         <child>
-          <object class="GtkBox">
-            <property name="orientation">vertical</property>
-            <style>
-              <class name="sidebar"/>
-              <class name="view"/>
-            </style>
-            <child>
-              <object class="GtkBox" id="radio_buttons">
-                <property name="margin-start">6</property>
-                <property name="margin-end">6</property>
-                <property name="margin-top">6</property>
-                <property name="margin-bottom">6</property>
-                <property name="homogeneous">1</property>
-                <style>
-                  <class name="linked"/>
-                </style>
+          <object class="AdwNavigationSplitView" id="paned">
+            <child type="sidebar">
+              <object class="AdwNavigationPage">
+                <property name="title" translatable="yes">D-Spy</property>
                 <child>
-                  <object class="DspyConnectionButton" id="session_button">
-                    <property name="bus-type">session</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="DspyConnectionButton" id="system_button">
-                    <property name="bus-type">system</property>
-                    <property name="group">session_button</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkSearchEntry" id="search_entry">
-                <property name="placeholder-text" translatable="yes">Search Bus Names</property>
-                <property name="margin-top">6</property>
-                <property name="margin-start">6</property>
-                <property name="margin-end">6</property>
-                <property name="margin-bottom">12</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkBox">
-                <property name="margin-start">9</property>
-                <property name="margin-end">6</property>
-                <property name="margin-bottom">1</property>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="label" translatable="yes">Bus Names</property>
-                    <property name="hexpand">1</property>
-                    <property name="xalign">0.0</property>
-                    <style>
-                      <class name="dim-label"/>
-                    </style>
-                    <attributes>
-                      <attribute name="weight" value="bold"></attribute>
-                      <attribute name="scale" value=".833333"></attribute>
-                    </attributes>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkMenuButton" id="menu_button">
-                    <property name="focus-on-click">0</property>
-                    <property name="icon-name">pan-down-symbolic</property>
-                    <style>
-                      <class name="flat"/>
-                    </style>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkSeparator"/>
-            </child>
-            <child>
-              <object class="GtkScrolledWindow" id="names_scroller">
-                <property name="propagate-natural-width">1</property>
-                <property name="max-content-width">300</property>
-                <property name="vexpand">1</property>
-                <property name="child">
-                  <object class="GtkViewport">
-                    <property name="child">
-                      <object class="GtkListBox" id="names_list_box">
-                        <style>
-                          <class name="navigation-sidebar"/>
-                        </style>
+                  <object class="AdwToolbarView">
+                    <child type="top">
+                      <object class="AdwHeaderBar">
+                        <child type="end">
+                          <object class="GtkMenuButton">
+                            <property name="icon-name">open-menu-symbolic</property>
+                            <property name="menu-model">primary_menu</property>
+                          </object>
+                        </child>
                       </object>
-                    </property>
-                  </object>
-                </property>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkStack" id="stack">
-            <property name="transition-duration">300</property>
-            <property name="transition-type">crossfade</property>
-            <property name="hexpand">1</property>
-            <child>
-              <object class="GtkStackPage" id="empty">
-                <property name="name">empty-state</property>
-                <property name="child">
-                  <object class="AdwStatusPage">
-                    <property name="icon-name">org.gnome.dspy-symbolic</property>
-                    <property name="title" translatable="yes">Select a D-Bus Name</property>
-                    <property name="description" translatable="yes">Select a bus name to introspect the peer.</property>
-                  </object>
-                </property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkStackPage" id="introspect">
-                <property name="child">
-                  <object class="GtkBox">
-                    <property name="margin-start">12</property>
-                    <property name="margin-end">12</property>
-                    <property name="margin-top">12</property>
-                    <property name="margin-bottom">12</property>
-                    <property name="orientation">vertical</property>
-                    <property name="spacing">12</property>
-                    <child>
-                      <object class="DspyNameMarquee" id="name_marquee"/>
+                    </child>
+                    <child type="top">
+                      <object class="GtkBox" id="radio_buttons">
+                        <property name="margin-start">6</property>
+                        <property name="margin-end">6</property>
+                        <property name="margin-top">6</property>
+                        <property name="margin-bottom">6</property>
+                        <property name="homogeneous">1</property>
+                        <style>
+                          <class name="linked"/>
+                        </style>
+                        <child>
+                          <object class="DspyConnectionButton" id="session_button">
+                            <property name="bus-type">session</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="DspyConnectionButton" id="system_button">
+                            <property name="bus-type">system</property>
+                            <property name="group">session_button</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child type="top">
+                      <object class="GtkSearchEntry" id="search_entry">
+                        <property name="placeholder-text" translatable="yes">Search Bus Names</property>
+                        <property name="margin-top">6</property>
+                        <property name="margin-start">6</property>
+                        <property name="margin-end">6</property>
+                        <property name="margin-bottom">12</property>
+                      </object>
+                    </child>
+                    <child type="top">
+                      <object class="GtkBox">
+                        <property name="margin-start">9</property>
+                        <property name="margin-end">6</property>
+                        <property name="margin-bottom">1</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label" translatable="yes">Bus Names</property>
+                            <property name="hexpand">1</property>
+                            <property name="xalign">0.0</property>
+                            <style>
+                              <class name="dim-label"/>
+                            </style>
+                            <attributes>
+                              <attribute name="weight" value="bold"></attribute>
+                              <attribute name="scale" value=".833333"></attribute>
+                            </attributes>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkMenuButton" id="menu_button">
+                            <property name="focus-on-click">0</property>
+                            <property name="icon-name">pan-down-symbolic</property>
+                            <style>
+                              <class name="flat"/>
+                            </style>
+                          </object>
+                        </child>
+                      </object>
                     </child>
                     <child>
-                      <object class="GtkBox">
-                        <property name="orientation">vertical</property>
-                        <child>
-                          <object class="GtkFrame">
+                      <object class="GtkScrolledWindow" id="names_scroller">
+                        <property name="propagate-natural-width">1</property>
+                        <property name="max-content-width">300</property>
+                        <property name="vexpand">1</property>
+                        <property name="child">
+                          <object class="GtkViewport">
+                            <property name="child">
+                              <object class="GtkListBox" id="names_list_box">
+                                <style>
+                                  <class name="navigation-sidebar"/>
+                                </style>
+                              </object>
+                            </property>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwNavigationPage" id="bus_navigation_page">
+                <property name="title">Bus</property>
+                <child>
+                  <object class="GtkStack" id="stack">
+                    <property name="transition-duration">300</property>
+                    <property name="transition-type">crossfade</property>
+                    <property name="hexpand">1</property>
+                    <child>
+                      <object class="GtkStackPage" id="empty">
+                        <property name="name">empty-state</property>
+                        <property name="child">
+                          <object class="AdwToolbarView">
+                            <child type="top">
+                              <object class="AdwHeaderBar"/>
+                            </child>
                             <child>
-                              <object class="GtkScrolledWindow">
-                                <property name="vexpand">1</property>
+                              <object class="AdwStatusPage">
+                                <property name="icon-name">org.gnome.dspy-symbolic</property>
+                                <property name="title" translatable="yes">Select a D-Bus Name</property>
+                                <property name="description" translatable="yes">Select a bus name to introspect the peer.</property>
+                              </object>
+                            </child>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkStackPage" id="introspect">
+                        <property name="child">
+                          <object class="AdwToolbarView" id="bus_toolbar_view">
+                            <property name="reveal-bottom-bars">false</property>
+                            <child type="top">
+                              <object class="AdwHeaderBar">
+                                <child type="start">
+                                  <object class="GtkButton" id="refresh_button">
+                                    <property name="icon-name">view-refresh-symbolic</property>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkBox">
+                                <property name="margin-start">12</property>
+                                <property name="margin-end">12</property>
+                                <property name="margin-top">12</property>
+                                <property name="margin-bottom">12</property>
+                                <property name="orientation">vertical</property>
+                                <property name="spacing">12</property>
                                 <child>
-                                  <object class="DspyTreeView" id="introspection_tree_view">
-                                    <child internal-child="selection">
-                                      <object class="GtkTreeSelection"/>
+                                  <object class="DspyNameMarquee" id="name_marquee"/>
+                                </child>
+                                <child>
+                                  <object class="GtkBox">
+                                    <property name="orientation">vertical</property>
+                                    <child>
+                                      <object class="GtkFrame">
+                                        <child>
+                                          <object class="GtkScrolledWindow">
+                                            <property name="vexpand">1</property>
+                                            <child>
+                                              <object class="DspyTreeView" id="introspection_tree_view">
+                                                <child internal-child="selection">
+                                                  <object class="GtkTreeSelection"/>
+                                                </child>
+                                              </object>
+                                            </child>
+                                          </object>
+                                        </child>
+                                      </object>
                                     </child>
                                   </object>
                                 </child>
                               </object>
                             </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkBox">
-                            <property name="margin-top">6</property>
-                            <child>
-                              <object class="GtkButton" id="refresh_button">
-                                <property name="icon-name">view-refresh-symbolic</property>
+                            <child type="bottom">
+                              <object class="DspyMethodView" id="method_view">
+                                <property name="margin-start">12</property>
+                                <style>
+                                  <class name="methodview"/>
+                                </style>
                               </object>
                             </child>
                           </object>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkRevealer" id="method_revealer">
-                        <child>
-                          <object class="DspyMethodView" id="method_view">
-                            <property name="margin-start">12</property>
-                          </object>
-                        </child>
+                        </property>
                       </object>
                     </child>
                   </object>
-                </property>
+                </child>
               </object>
             </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwBreakpoint">
+            <condition>max-width: 600px</condition>
+            <setter object="paned" property="collapsed">True</setter>
           </object>
         </child>
       </object>
     </child>
   </template>
+  <menu id="primary_menu">
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_New Window</attribute>
+        <attribute name="action">app.new-window</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_About D-Spy</attribute>
+        <attribute name="action">app.about</attribute>
+      </item>
+    </section>
+  </menu>
 </interface>
