--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -28,6 +28,7 @@
                       <object class="AdwHeaderBar">
                         <child type="end">
                           <object class="GtkMenuButton">
+                            <property name="tooltip-text" translatable="yes">Main Menu</property>
                             <property name="icon-name">open-menu-symbolic</property>
                             <property name="menu-model">primary_menu</property>
                             <property name="primary">True</property>
@@ -155,6 +156,7 @@
                               <object class="AdwHeaderBar">
                                 <child type="start">
                                   <object class="GtkButton" id="refresh_button">
+                                    <property name="tooltip-text" translatable="yes">Refresh</property>
                                     <property name="icon-name">view-refresh-symbolic</property>
                                   </object>
                                 </child>
