dspy-view: Remove period from AdwStatusPage description
"Text generally shouldn’t end with a period".

https://developer.gnome.org/hig/guidelines/writing-style.html

--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -140,7 +140,7 @@
                               <object class="AdwStatusPage">
                                 <property name="icon-name">org.gnome.dspy-symbolic</property>
                                 <property name="title" translatable="yes">Select a D-Bus Name</property>
-                                <property name="description" translatable="yes">Select a bus name to introspect the peer.</property>
+                                <property name="description" translatable="yes">Select a bus name to introspect the peer</property>
                               </object>
                             </child>
                           </object>
