--- a/lib/gtk/menus.ui
+++ b/lib/gtk/menus.ui
@@ -2,7 +2,7 @@
 <interface>
   <menu id="dspy-connections-menu">
     <item>
-      <attribute name="label" translatable="yes">Connect to Other Bus</attribute>
+      <attribute name="label" translatable="yes">Connect to Other Bus…</attribute>
       <attribute name="action">dspy.connect-to-bus</attribute>
     </item>
   </menu>
