dspy-view: Allow connecting to a bus with CTRL+B

--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -11,6 +11,12 @@
             <property name="action">action(app.new-window)</property>
           </object>
         </child>
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;B</property>
+            <property name="action">action(dspy.connect-to-bus)</property>
+          </object>
+        </child>
       </object>
     </child>
     <child>
