--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -7,13 +7,7 @@
         <property name="scope">managed</property>
         <child>
           <object class="GtkShortcut">
-            <property name="trigger">&lt;Control&gt;N</property>
-            <property name="action">action(app.new-window)</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkShortcut">
-            <property name="trigger">&lt;Control&gt;B</property>
+            <property name="trigger">&lt;Control&gt;b</property>
             <property name="action">action(dspy.connect-to-bus)</property>
           </object>
         </child>
