--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -7,6 +7,16 @@
     <property name="default_height">300</property>
     <property name="title">D-Spy</property>
     <child>
+      <object class="GtkShortcutController">
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;n</property>
+            <property name="action">action(app.new-window)</property>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
       <object class="DspyView" id="view">
         <property name="vexpand">true</property>
       </object>
