view: migrate to libpanel for PanelDock
We want a resizable sidebar because not being able to read all the text
is extremely annoying.

This temporarily breaks using small form factors such as phones, but we
can address that with the AdwMultiLayoutView once we hoist DspyView up
into the DspyWindow object directly.

--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,20 @@
-dspyview dzlmultipaned > :first-child {
-  border-right: 1px solid @borders;
-}
-dspyview box.linked.horizontal > scrolledwindow:first-child {
-  border-right: none;
-}
-dspyview .sidebar button.popup.toggle {
-  border: none;
-  border-radius: 0px;
-  background: none;
-  box-shadow: none;
-  padding: 0px 6px;
-}
-dspyview .sidebar button:not(:hover) image {
-  color: alpha(currentColor, 0.6);
-}
 dspyview .methodview {
   padding: 12px;
+}
+
+toolbarview.sidebar {
+  border: none;
+}
+
+.sidebar {
+  background-color: var(--sidebar-bg-color);
+  color: var(--sidebar-fg-color);
+}
+
+.sidebar .view {
+  background: none;
+}
+
+.sidebar .view row {
+  background: none;
 }
