--- a/src/dspy-view.ui
+++ b/src/dspy-view.ui
@@ -10,12 +10,24 @@
             <property name="action">action(dspy.connect-to-bus)</property>
           </object>
         </child>
-      </object>
-    </child>
-    <child>
-      <object class="AdwBreakpoint">
-        <condition>max-width: 600sp</condition>
-        <setter object="multi_layout" property="layout-name">narrow</setter>
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;n</property>
+            <property name="action">action(app.new-window)</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;w</property>
+            <property name="action">action(window.close)</property>
+          </object>
+        </child>
+        <child>
+          <object class="AdwBreakpoint">
+            <condition>max-width: 600sp</condition>
+            <setter object="multi_layout" property="layout-name">narrow</setter>
+          </object>
+        </child>
       </object>
     </child>
     <child>
