--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -1,13 +1,283 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
 <interface>
-  <requires lib="gtk+" version="3.20"/>
   <template class="DspyWindow" parent="AdwApplicationWindow">
-    <property name="title">D-Spy</property>
     <child>
-      <object class="DspyView" id="view">
-        <property name="vexpand">true</property>
+      <object class="GtkShortcutController">
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;b</property>
+            <property name="action">action(dspy.connect-to-bus)</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;n</property>
+            <property name="action">action(app.new-window)</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkShortcut">
+            <property name="trigger">&lt;Control&gt;w</property>
+            <property name="action">action(window.close)</property>
+          </object>
+        </child>
       </object>
     </child>
+    <property name="content">
+      <object class="AdwMultiLayoutView" id="multi_layout">
+        <child type="sidebar">
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkBox" id="radio_buttons">
+                <property name="margin-start">6</property>
+                <property name="margin-end">6</property>
+                <property name="margin-top">6</property>
+                <property name="margin-bottom">6</property>
+                <property name="homogeneous">true</property>
+                <style>
+                  <class name="linked"/>
+                </style>
+                <child>
+                  <object class="DspyConnectionButton" id="session_button">
+                    <property name="bus-type">session</property>
+                    <property name="use-underline">true</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="DspyConnectionButton" id="system_button">
+                    <property name="bus-type">system</property>
+                    <property name="group">session_button</property>
+                    <property name="use-underline">true</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkSearchEntry" id="search_entry">
+                <property name="placeholder-text" translatable="yes">Search Bus Names</property>
+                <property name="margin-top">6</property>
+                <property name="margin-start">6</property>
+                <property name="margin-end">6</property>
+                <property name="margin-bottom">12</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="margin-start">9</property>
+                <property name="margin-end">6</property>
+                <property name="margin-bottom">1</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label" translatable="yes">Bus Names</property>
+                    <property name="hexpand">true</property>
+                    <property name="xalign">0.0</property>
+                    <style>
+                      <class name="dim-label"/>
+                    </style>
+                    <attributes>
+                      <attribute name="weight" value="bold"></attribute>
+                      <attribute name="scale" value=".833333"></attribute>
+                    </attributes>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkMenuButton" id="menu_button">
+                    <property name="focus-on-click">0</property>
+                    <property name="icon-name">pan-down-symbolic</property>
+                    <style>
+                      <class name="flat"/>
+                    </style>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow" id="names_scroller">
+                <property name="propagate-natural-width">true</property>
+                <property name="vexpand">true</property>
+                <property name="child">
+                  <object class="GtkViewport">
+                    <property name="child">
+                      <object class="GtkListBox" id="names_list_box">
+                        <style>
+                          <class name="navigation-sidebar"/>
+                        </style>
+                      </object>
+                    </property>
+                  </object>
+                </property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child type="sidebar_header">
+          <object class="AdwHeaderBar">
+            <property name="show-end-title-buttons">false</property>
+            <child type="title">
+              <object class="AdwWindowTitle">
+                <property name="title">D-Spy</property>
+              </object>
+            </child>
+            <child type="end">
+              <object class="GtkMenuButton">
+                <property name="tooltip-text" translatable="yes">Main Menu</property>
+                <property name="icon-name">open-menu-symbolic</property>
+                <property name="menu-model">primary_menu</property>
+                <property name="primary">true</property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child type="content">
+          <object class="GtkStack" id="stack">
+            <property name="transition-duration">300</property>
+            <property name="transition-type">crossfade</property>
+            <property name="hexpand">true</property>
+            <child>
+              <object class="GtkStackPage" id="empty">
+                <property name="name">empty-state</property>
+                <property name="child">
+                  <object class="AdwStatusPage" id="status_page">
+                    <property name="title" translatable="yes">Select a D-Bus Name</property>
+                    <property name="description" translatable="yes">Select a bus name to introspect the peer</property>
+                  </object>
+                </property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkStackPage" id="introspect">
+                <property name="child">
+                  <object class="GtkBox">
+                    <property name="margin-start">12</property>
+                    <property name="margin-end">12</property>
+                    <property name="margin-top">12</property>
+                    <property name="margin-bottom">12</property>
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">12</property>
+                    <child>
+                      <object class="DspyNameMarquee" id="name_marquee"/>
+                    </child>
+                    <child>
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <child>
+                          <object class="GtkFrame">
+                            <child>
+                              <object class="GtkScrolledWindow">
+                                <property name="vexpand">true</property>
+                                <child>
+                                  <object class="DspyTreeView" id="introspection_tree_view">
+                                    <child internal-child="selection">
+                                      <object class="GtkTreeSelection"/>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="DspyMethodView" id="method_view">
+                        <property name="margin-start">12</property>
+                        <style>
+                          <class name="methodview"/>
+                        </style>
+                      </object>
+                    </child>
+                  </object>
+                </property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child type="content_header">
+          <object class="AdwHeaderBar">
+            <property name="show-start-title-buttons">false</property>
+            <child type="title">
+              <object class="AdwWindowTitle" id="title">
+                <property name="title"></property>
+              </object>
+            </child>
+            <child type="start">
+              <object class="GtkButton" id="refresh_button">
+                <property name="tooltip-text" translatable="yes">Refresh</property>
+                <property name="icon-name">view-refresh-symbolic</property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwLayout">
+            <property name="name">wide</property>
+            <property name="content">
+              <object class="PanelDock" id="dock">
+                <child type="start">
+                  <object class="AdwToolbarView">
+                    <style>
+                      <class name="sidebar"/>
+                    </style>
+                    <child type="top">
+                      <object class="AdwLayoutSlot">
+                        <property name="id">sidebar_header</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwLayoutSlot">
+                        <property name="id">sidebar</property>
+                        <property name="vexpand">true</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <property name="reveal-start">true</property>
+                <property name="start-width">300</property>
+                <child type="center">
+                  <object class="AdwToolbarView">
+                    <child type="top">
+                      <object class="AdwLayoutSlot">
+                        <property name="id">content_header</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwLayoutSlot">
+                        <property name="id">content</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </property>
+          </object>
+        </child>
+        <child>
+          <object class="AdwLayout">
+            <property name="name">narrow</property>
+            <property name="content">
+              <object class="GtkLabel">
+                <property name="label">narrow here</property>
+              </object>
+            </property>
+          </object>
+        </child>
+        <property name="layout-name">wide</property>
+      </object>
+    </property>
   </template>
+  <menu id="primary_menu">
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_New Window</attribute>
+        <attribute name="action">app.new-window</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_About D-Spy</attribute>
+        <attribute name="action">app.about</attribute>
+      </item>
+    </section>
+  </menu>
 </interface>
