--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -27,6 +27,7 @@
       <object class="AdwBreakpoint">
         <condition>max-width: 600sp</condition>
         <setter object="multi_layout" property="layout-name">narrow</setter>
+        <setter object="sidebar_header" property="show-end-title-buttons">true</setter>
       </object>
     </child>
     <property name="content">
@@ -118,7 +119,7 @@
           </object>
         </child>
         <child type="sidebar_header">
-          <object class="AdwHeaderBar">
+          <object class="AdwHeaderBar" id="sidebar_header">
             <property name="show-end-title-buttons">false</property>
             <child type="title">
               <object class="AdwWindowTitle">
