--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -157,37 +157,27 @@
                 <property name="child">
                   <object class="AdwPreferencesPage">
                     <child>
-                      <object class="GtkBox">
-                        <property name="margin-start">12</property>
-                        <property name="margin-end">12</property>
-                        <property name="margin-top">12</property>
-                        <property name="margin-bottom">12</property>
-                        <property name="orientation">vertical</property>
-                        <property name="spacing">12</property>
+                      <object class="DspyNameMarquee" id="name_marquee">
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup">
                         <child>
-                          <object class="DspyNameMarquee" id="name_marquee"/>
-                        </child>
-                        <child>
-                          <object class="GtkBox">
-                            <property name="orientation">vertical</property>
+                          <object class="GtkScrolledWindow">
+                            <property name="vexpand">true</property>
                             <child>
-                              <object class="GtkFrame">
-                                <child>
-                                  <object class="GtkScrolledWindow">
-                                    <property name="vexpand">true</property>
-                                    <child>
-                                      <object class="DspyTreeView" id="introspection_tree_view">
-                                        <child internal-child="selection">
-                                          <object class="GtkTreeSelection"/>
-                                        </child>
-                                      </object>
-                                    </child>
-                                  </object>
+                              <object class="DspyTreeView" id="introspection_tree_view">
+                                <child internal-child="selection">
+                                  <object class="GtkTreeSelection"/>
                                 </child>
                               </object>
                             </child>
                           </object>
                         </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwPreferencesGroup">
                         <child>
                           <object class="DspyMethodView" id="method_view">
                             <property name="margin-start">12</property>
@@ -208,7 +198,7 @@
           <object class="AdwHeaderBar">
             <property name="show-start-title-buttons">false</property>
             <child type="title">
-              <object class="AdwWindowTitle" id="title">
+              <object class="AdwWindowTitle">
                 <property name="title"></property>
               </object>
             </child>
